Fix case studies on mobile

--- a/components/caseOfStudies/caseTile/caseTile.module.scss
+++ b/components/caseOfStudies/caseTile/caseTile.module.scss
@@ -1,11 +1,11 @@
 @import '../../../css/variables';
 
-.case-tile-wrapper {
+.wrapper {
   width: 70vw;
   margin: 5% auto;
   box-shadow: 5px 5px 10px #565656;
 
-  .case-tile-title {
+  .title {
     background-color: $main-orange;
     color: $white-color;
     font-family: $main-font;
@@ -14,7 +14,7 @@
     font-size: 1.2rem;
   }
 
-  .case-tile-text {
+  .text {
     background-color: $grey-color;
     font-family: $main-font;
     text-align: justify;
