--- a/components/header/mobile-menu/mobileMenu.module.scss
+++ b/components/header/mobile-menu/mobileMenu.module.scss
@@ -85,7 +85,7 @@ $lg-screen: 1024px;
 .menu {
   position: absolute;
   top: -100%;
-  left: 70%;
+  left: 90%;
   padding: 200% 70% 160%;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
